bash/functions: drop shebang (these are functions, not scripts) & add pure-getopt 1.4.5 directly (drop the submodule)

--- a/bash/functions/todo
+++ b/bash/functions/todo
@@ -1,4 +1,3 @@
-#!/bin/bash
 # todo - print directory todos upon directory change
 
 function todo() {
@@ -181,3 +180,5 @@ function todo() {
             ;;
     esac
 }
+
+# vim: ft=bash
